# go2-slam-navigation

./: .gitignore  README.md  VERIFICATION_CHECKLIST.md  map.pgm  map.yaml  setup.sh  velodyne_to_scan.launch.py
src/cartographer_slam/: CMakeLists.txt  package.xml
src/cartographer_slam/config/: go2_2d.lua
src/cartographer_slam/launch/: cartographer.launch.py
src/champ/champ_description/rviz/: urdf_viewer.rviz
src/go2_config/config/autonomy/: slam.yaml
src/go2_config/worlds/: simple_room.world
